--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+/Users/giampaolomarcon/London-trip/html-london-trip/index.html
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
