Add: First part body

--- a/index.html
+++ b/index.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
-/Users/giampaolomarcon/London-trip/html-london-trip/index.html
+
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>London trip</title>
   </head>
-  <body></body>
+  <body>
+    <h2>Il mio viaggio a Londra</h2>
+
+    <img src="Img1.jpg" alt="" />
+    <img src="Img2.jpg" alt="" />
+    <img src="Img3.jpg" alt="" />
+  </body>
 </html>
