--- a/index.html
+++ b/index.html
@@ -12,5 +12,35 @@
     <img src="Img1.jpg" alt="" />
     <img src="Img2.jpg" alt="" />
     <img src="Img3.jpg" alt="" />
+    <hr />
+    <h3>Le mie spese</h3>
+    <table>
+      <tr>
+        <th>Numero</th>
+        <th>Descrizione</th>
+        <th>Costo</th>
+      </tr>
+      <tr>
+        <td>1</td>
+        <td>Biglietto aereo</td>
+        <td>120€</td>
+      </tr>
+      <tr>
+        <td>1</td>
+        <td>Biglietto aereo</td>
+        <td>120€</td>
+      </tr>
+      <tr>
+        <td>1</td>
+        <td>Biglietto aereo</td>
+        <td>120€</td>
+      </tr>
+      <tr>
+        <td>Totale</td>
+        <td></td>
+        <td>360€</td>
+      </tr>
+    </table>
+    <hr />
   </body>
 </html>
