Add: 3 part body

--- a/index.html
+++ b/index.html
@@ -7,12 +7,14 @@
     <title>London trip</title>
   </head>
   <body>
+    <!-- Parte 1 -->
     <h2>Il mio viaggio a Londra</h2>
 
     <img src="Img1.jpg" alt="" />
     <img src="Img2.jpg" alt="" />
     <img src="Img3.jpg" alt="" />
     <hr />
+    <!-- part 2 -->
     <h3>Le mie spese</h3>
     <table>
       <tr>
@@ -42,5 +44,13 @@
       </tr>
     </table>
     <hr />
+    <!-- part 3 -->
+    <h3>Cose da fare</h3>
+    <ul>
+      <li>Visitare la tower of London</li>
+      <li>Visitare Greenwich</li>
+      <li>Ascoltare un artista di strada a Covent Garden</li>
+      <li>Mangiare il tipico Fish and Chips inglese</li>
+    </ul>
   </body>
 </html>
